kubernetes/homelab/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.drmoo.io
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/secret-name: "drmoo-io-tls"
spec:
  ingressClassName: internal
  rules:
    - host: emqx.drmoo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
